Fix: irc page link broken on boatdev project page, fixed
Fix: resume page types
Minor: updated resume pdf
Fix: updated CSS file to show link colours

--- a/daniel/GoodTradition.css
+++ b/daniel/GoodTradition.css
@@ -20,6 +20,9 @@ body {
   margin: 5px;
 }
 
+a:link {color: #FFBB00;}
+a:visited {color: #AA5500;}
+
 .text-body {
   position: absolute;
   left: 400px;
